# parakeet-tdt-0.6b-v3-fastapi-openai

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile.cpu  Dockerfile.gpu  README.md  app.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-image.yml
docs/: architecture.md  dependency-audit-2026-03-03.md
scripts/: benchmark.py  patch_upstream_dockerfile.sh
src/parakeet_server/: __init__.py  audio_processing.py  config.py  runtime.py  server.py  transcript_formats.py
tests/: test_audio_processing.py  test_model_selection.py  test_transcript_formats.py
