[project]
name = "parakeet-tdt-0.6b-v3-fastapi-openai"
version = "0.1.0"
description = "Parakeet TDT ONNX transcription server with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "onnx-asr[hub]>=0.10.2",
  "waitress>=3.0.2",
  "flask>=3.1.3",
  "openai>=2.24.0",
  "typing_extensions>=4.15.0",
  "psutil>=7.2.2",
  "requests>=2.32.5",
  "numpy>=1.21.6",
]

[project.optional-dependencies]
cpu = [
  "onnxruntime>=1.23.2,<1.24.0",
]
gpu = [
  "onnxruntime-gpu>=1.23.2,<1.24.0",
]
dev = [
  "pytest>=9.0.2",
]

[tool.uv]
default-groups = []
